# safe-rl-manifold-suite

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CORRECT_ARCHITECTURE_README.md  DIRECTORIES.md  FORMATION_EXPERIMENT_SETUP.md  FORMATION_PARAMETERS_REFERENCE.md  README.md  requirements.txt  run_chap4.sh  run_experiments.sh  setup.py  setup.sh  test_correct_architecture.py
IROS2026/: .gitignore  README.md  main.tex  requirements.txt  run_experiments.sh  setup.sh
IROS2026/archives/: IROS.tex  root.tex
IROS2026/docs/: EKF_SUMMARY.md
IROS2026/scripts/: ablation_results.json  check_refs.py  generate_ablation_figures.py  generate_real_training_curves.py  generate_ros2_results.py  plot_webots_figures.py  rerun_webots_traj.py  run_ablation.py  run_ablation_experiment.py  run_ekf_compare.py  run_ekf_eval.py  run_noise.py  (+7 more)
cosmos/: __init__.py  registry.py  train.py  trainer.py
cosmos/ros2/: CMakeLists.txt
cosmos/ros2/config/: formation_params.yaml
cosmos/ros2/epuck_formation/: gcpl_full_stack_supervisor.py  gcpl_supervisor.py
cosmos/ros2/scripts/: formation_controller.py
cosmos/ros2/worlds/: epuck_arena.wbt
docs/: ROS2_WEBOTS_SETUP.md
formation_nav/: COSMOS_Demo.ipynb  README.md  benchmark.py  config.py  demo.py  demo_visualization.py  eval.py  requirements.txt  run_demo.sh  train.py  train.sh
paper-safeMARL/: chap4-rmpflow-strict-baseline.md  chap4-rq-deliverables.md  chap5-fusion-design.md  chap5-platform-design.md  chap5-refRA-patch-plan.md  chap5-revision-plan.md  chap5.md  gb7714-2015-gbk.def  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc  main.xdv  myrefs.bib  ustbthesis.cls
refs/: ATACOM-Thesis-Liu2024-学习笔记.md  README.md  multi_agent_formation_safe_avoidance_design.md  reading-notes.md
results/: metrics.json
ros2_ws/src/epuck_formation/: package.xml
ros2_ws/src/epuck_formation/launch/: epuck_formation.launch.py
safepo/: evaluate_rmpflow.py
scripts/: plot_chap4.py
tests/: test_all_envs.py
(+710 files in other folders)
